# arkworks-example

./: Cargo.toml
file/: input.txt  proof.txt  vkey.txt
src/: cube.rs  encode.rs  hash.rs  main.rs
